# mvs

./: .gitignore  Pipfile  README.md  setup.cfg
renames/: __main__.py  filelist.txt  renames.py
tests/: test_renames.py
tests/test_products/: test_write_file_names_result.txt
tests/testd1/: filelist.txt
tests/testd2/: tmp2_2.txt
tests/testd3/: tmp2_0.txt  tmp2_1.txt
