[metadata]
name = mvs
version = 0.0.1
author = 1izard
description = Move files like mv by editor
long_descriptoin = file: README.md
license = MIT
classifires =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
packages = mvs
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    mvs = mvs.__main__:main